# socks6-app

./: LICENSE  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  profiles.rs  proxy.rs  system_proxy.rs
src/components/: LogViewer.tsx  ProfileForm.tsx  StatusCard.tsx
src/lib/: tauri.ts  types.ts
src/pages/: Dashboard.tsx  Profiles.tsx  Settings.tsx
