[package]
name = "socks6-app"
version = "1.0.0"
edition = "2021"

[lib]
name = "socks6_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "time", "signal", "process"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
rand = "0.8"
dirs = "6"

socks6 = { path = "../../socks6" }

[dependencies.tauri-plugin-shell]
version = "2"
